--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
   </audio>
 
   <!-- 主内容区 -->
-  <div class="container">
+  <div class="container" id="mainContainer">
     <h2>输入日期开启惊喜</h2>
     <input type="text" id="dateInput" placeholder="格式：xxxx.xx.xx">
     <button onclick="checkDate()">开启</button>
@@ -125,11 +125,11 @@
         heart.className = 'floating-heart';
         heart.innerText = '♥';
         
-        // 随机大小（12px-24px）
+        // 随机大小（12px - 24px）
         heart.style.fontSize = (Math.random() * 12 + 12) + 'px';
         // 随机水平位置
         heart.style.left = (Math.random() * 100) + 'vw';
-        // 随机动画时长（4-8秒）
+        // 随机动画时长（4 - 8秒）
         heart.style.animationDuration = (Math.random() * 4 + 4) + 's';
         // 随机延迟出现
         heart.style.animationDelay = (Math.random() * 8) + 's';
@@ -142,16 +142,18 @@
     createFloatingHearts();
 
     // 日期验证逻辑
-   const targetDate = "2025.08.29"; 
+    const targetDate = "2025.08.29"; 
     function checkDate() {
-        const input = document.getElementById('dateInput').value;
-        const tips = document.getElementById('tips');
-        if (input === targetDate) {
-            // 显示嵌入message.html的iframe
-            document.getElementById('messageFrame').style.display = 'block';
-        } else {
-            tips.innerText = "日期不对哦～ 要输入 你的生日 才能开启";
-        }
+      const input = document.getElementById('dateInput').value;
+      const tips = document.getElementById('tips');
+      if (input === targetDate) {
+        // 隐藏主内容区
+        document.getElementById('mainContainer').style.display = 'none';
+        // 显示嵌入message.html的iframe
+        document.getElementById('messageFrame').style.display = 'block';
+      } else {
+        tips.innerText = "日期不对哦～ 要输入 你的生日 才能开启";
+      }
     }
   </script>
 </body>
